// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthAddress component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  position: absolute;
  right: 0;
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  padding: 0;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c5:hover {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c5 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c5 > div > svg {
  display: block;
}

.c5 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c5 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c5 > div:first-child:last-child > svg {
  margin: 0;
}

.c5 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c5:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:hover::before {
  opacity: 0.9;
}

.c5:active {
  box-shadow: none;
  background: #000;
}

.c5::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c7 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  margin-left: 8px;
  padding: 0;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c7 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c7 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c7 > div > svg {
  display: block;
}

.c7 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c7 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c7 > div:first-child:last-child > svg {
  margin: 0;
}

.c7 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c7:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c7:hover::before {
  opacity: 0.9;
}

.c7:active {
  box-shadow: none;
  background: #000;
}

.c7::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  font-weight: 600;
  padding: auto;
  padding-left: 16px;
  padding-right: 6rem;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c2:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c2:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:valid {
  border-color: #28C081;
}

.was-validated .c2:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c2:invalid {
  border-color: #DC2C10;
}

.was-validated .c2:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

<div
  class="c0 c1"
>
  <input
    aria-label="Ethereum Address"
    class="c2 c3"
    color="text"
    font-size="1rem"
    font-weight="3"
    height="3rem"
    readonly=""
    title="Ethereum Address"
    value="0x99cb784f0429efd72wu39fn4256n8wud4e01c7d2"
    width="1"
  />
  <div
    class="c4"
    display="flex"
  >
    <div>
      <button
        class="c5"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
        height="3rem"
      >
        <span
          class="button-text"
        >
          <svg
            class="c6"
            color="inherit"
            fill="currentcolor"
            height="24"
            size="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      class="c7"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
      height="3rem"
    >
      <span
        class="button-text"
      >
        <svg
          class="c8"
          color="inherit"
          fill="currentcolor"
          height="24"
          size="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm-7 7H3v4c0 1.1.9 2 2 2h4v-2H5v-4zM5 5h4V3H5c-1.1 0-2 .9-2 2v4h2V5zm14-2h-4v2h4v4h2V5c0-1.1-.9-2-2-2zm0 16h-4v2h4c1.1 0 2-.9 2-2v-4h-2v4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`EthAddress component sanity matches default snapshot textLabels 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  position: absolute;
  right: 0;
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5:hover {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c5 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c5 > div > svg {
  display: block;
}

.c5 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c5 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c5 > div:first-child:last-child > svg {
  margin: 0;
}

.c5 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c5:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:hover::before {
  opacity: 0.9;
}

.c5:active {
  box-shadow: none;
  background: #000;
}

.c5::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c6 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  margin-left: 8px;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c6 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6:hover {
  cursor: pointer;
}

.c6:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c6 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 > div > svg {
  display: block;
}

.c6 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c6 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c6 > div:first-child:last-child > svg {
  margin: 0;
}

.c6 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c6:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c6:hover::before {
  opacity: 0.9;
}

.c6:active {
  box-shadow: none;
  background: #000;
}

.c6::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  font-weight: 600;
  padding: auto;
  padding-left: 16px;
  padding-right: 12rem;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c2:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c2:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:valid {
  border-color: #28C081;
}

.was-validated .c2:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c2:invalid {
  border-color: #DC2C10;
}

.was-validated .c2:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

<div
  class="c0 c1"
>
  <input
    aria-label="Ethereum Address"
    class="c2 c3"
    color="text"
    font-size="1rem"
    font-weight="3"
    height="3rem"
    readonly=""
    title="Ethereum Address"
    value="0x99cb784f0429efd72wu39fn4256n8wud4e01c7d2"
    width="1"
  />
  <div
    class="c4"
    display="flex"
  >
    <div>
      <button
        class="c5"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
        height="3rem"
      >
        <span
          class="button-text"
        >
          Copy
        </span>
      </button>
    </div>
    <button
      class="c6"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
      height="3rem"
    >
      <span
        class="button-text"
      >
        Show QR Code
      </span>
    </button>
  </div>
</div>
`;

exports[`EthAddress component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  position: absolute;
  right: 0;
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  padding: 0;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c5:hover {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c5 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c5 > div > svg {
  display: block;
}

.c5 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c5 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c5 > div:first-child:last-child > svg {
  margin: 0;
}

.c5 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c5:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:hover::before {
  opacity: 0.9;
}

.c5:active {
  box-shadow: none;
  background: #000;
}

.c5::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c7 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  margin-left: 8px;
  padding: 0;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c7 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c7:hover {
  cursor: pointer;
}

.c7:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c7 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c7 > div > svg {
  display: block;
}

.c7 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c7 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c7 > div:first-child:last-child > svg {
  margin: 0;
}

.c7 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c7:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c7:hover::before {
  opacity: 0.9;
}

.c7:active {
  box-shadow: none;
  background: #000;
}

.c7::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  font-weight: 600;
  padding: auto;
  padding-left: 16px;
  padding-right: 6rem;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c2:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c2:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:valid {
  border-color: #28C081;
}

.was-validated .c2:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c2:invalid {
  border-color: #DC2C10;
}

.was-validated .c2:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

<div
  class="c0 c1"
>
  <input
    aria-label="Ethereum Address"
    class="c2 c3"
    color="text"
    font-size="1rem"
    font-weight="3"
    height="3rem"
    readonly=""
    title="Ethereum Address"
    value="0x99cb784f0429efd72wu39fn4256n8wud4e01c7d2"
    width="1"
  />
  <div
    class="c4"
    display="flex"
  >
    <div>
      <button
        class="c5"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
        height="3rem"
      >
        <span
          class="button-text"
        >
          <svg
            class="c6"
            color="inherit"
            fill="currentcolor"
            height="24"
            size="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      class="c7"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
      height="3rem"
    >
      <span
        class="button-text"
      >
        <svg
          class="c8"
          color="inherit"
          fill="currentcolor"
          height="24"
          size="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm-7 7H3v4c0 1.1.9 2 2 2h4v-2H5v-4zM5 5h4V3H5c-1.1 0-2 .9-2 2v4h2V5zm14-2h-4v2h4v4h2V5c0-1.1-.9-2-2-2zm0 16h-4v2h4c1.1 0 2-.9 2-2v-4h-2v4z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`EthAddress component sanity matches themed snapshot textLabels 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  position: absolute;
  right: 0;
  margin-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5:hover {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c5 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c5 > div > svg {
  display: block;
}

.c5 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c5 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c5 > div:first-child:last-child > svg {
  margin: 0;
}

.c5 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c5:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:hover::before {
  opacity: 0.9;
}

.c5:active {
  box-shadow: none;
  background: #000;
}

.c5::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c6 {
  box-sizing: border-box;
  width: small;
  height: 3rem;
  margin-left: 8px;
  position: relative;
  min-width: 3rem;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 0;
  padding-bottom: 0;
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  line-height: 1;
  color: #fff;
  background-color: #999;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c6 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6:hover {
  cursor: pointer;
}

.c6:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c6 > span.button-text {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 > div > svg {
  display: block;
}

.c6 > div:first-child > svg {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c6 > div:last-child > svg {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c6 > div:first-child:last-child > svg {
  margin: 0;
}

.c6 {
  color: var(--contrast-color);
  background: #FFF;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c6:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c6:hover::before {
  opacity: 0.9;
}

.c6:active {
  box-shadow: none;
  background: #000;
}

.c6::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  font-weight: 600;
  padding: auto;
  padding-left: 16px;
  padding-right: 12rem;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c2:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c2:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c2[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c2[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c2[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c2:valid {
  border-color: #28C081;
}

.was-validated .c2:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c2:invalid {
  border-color: #DC2C10;
}

.was-validated .c2:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

<div
  class="c0 c1"
>
  <input
    aria-label="Ethereum Address"
    class="c2 c3"
    color="text"
    font-size="1rem"
    font-weight="3"
    height="3rem"
    readonly=""
    title="Ethereum Address"
    value="0x99cb784f0429efd72wu39fn4256n8wud4e01c7d2"
    width="1"
  />
  <div
    class="c4"
    display="flex"
  >
    <div>
      <button
        class="c5"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
        height="3rem"
      >
        <span
          class="button-text"
        >
          Copy
        </span>
      </button>
    </div>
    <button
      class="c6"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
      height="3rem"
    >
      <span
        class="button-text"
      >
        Show QR Code
      </span>
    </button>
  </div>
</div>
`;
